<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="37dp"
        android:fontFamily="@font/comixo"
        android:text="@string/help_faqs"
        android:textColor="@color/sti_yellow"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/mont"
                android:text="@string/check_balance_this_feature_allows_you_to_check_your_current_balance"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="354dp"
                android:layout_height="226dp"
                android:layout_marginStart="25dp"
                tools:layout_editor_absoluteX="261dp"
                android:src="@drawable/balance"/>

            <TextView
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/mont"
                android:text="@string/pay_balance_this_feature_allows_you_to_pay_your_balance_n_nif_you_have_no_balance_then_it_won_t_accept_the_payment_n_njust_click_on_the_submit_pay_button_to_complete_the_payment_action"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="354dp"
                android:layout_height="226dp"
                android:layout_marginStart="25dp"
                tools:layout_editor_absoluteX="261dp"
                android:src="@drawable/pay" />

            <TextView
                android:layout_width="377dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/mont"
                android:text="@string/student_loans_this_feature_allows_you_to_get_a_student_loan_n_nif_you_already_have_an_outstanding_balance_equal_to_or_greater_than_1_peso_you_are_not_allowed_to_get_a_student_loan_n_nour_program_allows_you_to_borrow_a_maximum_amount_of_50_000_pesos"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="354dp"
                android:layout_height="226dp"
                android:layout_marginStart="25dp"
                tools:layout_editor_absoluteX="261dp"
                android:src="@drawable/loaning" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/sti_yellow"
        android:fontFamily="@font/mont"
        android:text="@string/go_back"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>