<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sti_blue">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/payTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sti_logo" />

    <TextView
        android:id="@+id/payTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="@font/mont"
        android:text="@string/pay_your_balance"
        android:textColor="@color/white"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/amountNumber"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/amountNumber"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="amount"
        android:background="@color/white"
        android:ems="10"
        android:fontFamily="@font/mont"
        android:hint="@string/amount"
        android:inputType="number"
        android:textColor="@color/sti_grey"
        android:textColorHint="@color/sti_grey"
        app:layout_constraintBottom_toTopOf="@+id/proceedBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payTxt" />

    <Button
        android:id="@+id/proceedBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="398dp"
        android:backgroundTint="@color/sti_yellow"
        android:fontFamily="@font/mont"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/amountNumber"
        app:layout_constraintTop_toBottomOf="@+id/amountNumber" />
</androidx.constraintlayout.widget.ConstraintLayout>